# bedrock-server-manager

./: CMakeLists.txt  README.md
src/: ServerMgr.cpp  ServerMgr.h  WebApiMain.cpp  WebApiMain.h  main.cpp
src/AppRunner/: AppRunner.cpp  AppRunner.h
src/Logger/: Logger.cpp  Logger.h
src/util/: SystemException.cpp  SystemException.h  WrappedFunc.cpp  WrappedFunc.h
